[metadata]
name = therocktrading-blockchain-data
author = Matteo
url = https://github.com/Enucatl/therocktrading-blockchain-data
description = collect data to be submitted to the therocktrading bankruptcy procedure
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
install_requires = 
    pandas >= 2.0.0
    requests
    click
    pyarrow
setup_requires =
    setuptools-git-versioning

[options.extras_require]
dev = 
    pytest
    black
    jupyterlab
    ipywidgets 
    widgetsnbextension 
    pandas-profiling
    scalene

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
